--- a/css/styles.css
+++ b/css/styles.css
@@ -6,5 +6,27 @@ html {
   padding-left: 2%;
   padding-right: 3%;
   margin: 0 auto;
-  background: #F5F5F0;
+  background: #000000;
+}
+
+hr {
+  border: 1px solid #008000;
+}
+
+p, h1 {
+  color: #00ff00;
+}
+
+h1 {
+  text-transform: uppercase;
+  font-size: 20px;
+  font-weight: bold;
+  margin-top: 4ch;
+  margin-bottom: 0px;
+}
+
+p {
+  display: block;
+  text-align: justify;
+  margin-top: 0px;
 }
